--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -63,7 +63,7 @@ main .cartao-pokemon:hover {
 }
 
 .modo-escuro .cartao-pokemon {
-	background-color: #a8a8a8;
+	background-color: #4e4646;
 }
 
 main .cartao-pokemon .informacoes {
