--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -130,7 +130,7 @@ main .cartao-pokemon .voador {
 	background-color: rgb(83, 232, 245);
 }
 .eletrico {
-	background-color: yellow;
+	background-color: rgba(246, 246, 118, 0.912);
 }
 
 
